fix alignment of information banner

--- a/style.css
+++ b/style.css
@@ -66,13 +66,14 @@ a {
 }
 
 .main {
-    padding: 0px 500px 150px 500px;
+    padding: 30px 500px 150px 500px;
 }
 
 .info-header {
     font-size: 36px;
     color: #1f2937;
     font-weight: 800;
+    padding-bottom: 30px;
     text-align: center;
 }
 
@@ -85,10 +86,10 @@ a {
 .pic {
     display: flex;
     flex-wrap: wrap;
-    height: 150px;
-    width: 150px;
-    border: 4px solid rgba(0, 81, 255, 0.492);
-    border-radius: 10px;
+    height: 170px;
+    width: 170px;
+    border: 6px solid rgba(0, 81, 255, 0.492);
+    border-radius: 14px;
 }
 
 .subject {
